--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,17 +9,18 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSources"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
@@ -28,50 +29,64 @@
             android:orientation="vertical"
             android:padding="8dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8dp">
+                android:layout_height="wrap_content"
+                android:background="@drawable/custom_edit_text"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
-                    android:id="@+id/linearLayout"
-                    android:layout_width="0dp"
+                <EditText
+                    android:id="@+id/inputIP"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/custom_edit_text"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/switch1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="@android:color/white"
+                    android:ems="10"
+                    android:hint="Default IP"
+                    android:inputType="textPersonName"
+                    android:text="192.168.0.11"
+                    android:textColor="@color/light_grey"
+                    android:textSize="@dimen/text_size"
+                    android:importantForAutofill="no" />
 
-                    <EditText
-                        android:id="@+id/inputIP"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginBottom="4dp"
-                        android:backgroundTint="@android:color/white"
-                        android:ems="10"
-                        android:hint="Ausgangspunkt"
-                        android:inputType="textPersonName"
-                        android:text="192.168.0.11"
-                        android:textColor="@color/light_grey"
-                        android:textSize="@dimen/text_size" />
+            </LinearLayout>
 
-                </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/custom_edit_text"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <Switch
-                    android:id="@+id/switch1"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/inputPort"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Switch"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="@android:color/white"
+                    android:ems="10"
+                    android:hint="Port"
+                    android:inputType="numberSigned"
+                    android:text="15439"
+                    android:textColor="@color/light_grey"
+                    android:textSize="@dimen/text_size"
+                    android:importantForAutofill="no" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -79,34 +94,62 @@
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/shutdown_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".50"
-                    android:background="@drawable/custom_rectangle_rounded_corners" android:backgroundTint="@color/red"
-                    android:text="Deaktivieren"
-                    android:textSize="@dimen/text_size"
-                    app:backgroundTint="@color/red" />
 
                 <Button
                     android:id="@+id/connect_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".50"
-                    android:background="@drawable/custom_rectangle_rounded_corners" android:backgroundTint="@color/red"
-                    android:text="Verbinden"
+                    android:background="@drawable/custom_rectangle_rounded_corners"
+                    android:backgroundTint="@color/red"
+                    android:text="Übernehmen"
                     android:textSize="@dimen/text_size"
                     app:backgroundTint="@color/red" />
             </LinearLayout>
 
 
-
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/sourcesContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:backgroundTint="@color/white"
+        android:padding="8dp"
+        android:visibility="gone"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5sp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSources"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:autoLink="web"
+                android:text="Icons"
+                android:textColor="@color/light_grey"
+                android:textSize="32sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:autoLink="web"
+                android:text="Pump icons created by Smashicons - Flaticon: https://www.flaticon.com/free-icons/pump\n\nPlant icons created by Freepik - Flaticon: https://www.flaticon.com/free-icons/plant\n\nOutlet icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/outlet\n\nWater drop icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/water-drop\n\nClouds and sun icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/clouds-and-sun\n\n Train icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/train\n\nPlaylist icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/playlist\n\nHour icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/hour\n\nPower off icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/power-off\n\nMoon icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/moon\n\nData storage icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/data-storage\n\nEmbedded icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/embedded\n\nBike icons created by DinosoftLabs - Flaticon: https://www.flaticon.com/free-icons/bike\n"
+                android:textColor="@color/light_grey" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/textViewSources"
         android:layout_width="wrap_content"
