fixed firebase bug, small ui consistencies

--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddEditNoteActivity"
+    tools:context=".ViewAndModels.AddEditNoteActivity"
+    android:background="@android:color/darker_gray"
     android:padding="16dp"
     android:orientation="vertical">
 
