--- a/app/src/main/res/layout/activity_plant_overview.xml
+++ b/app/src/main/res/layout/activity_plant_overview.xml
@@ -4,9 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
     tools:context=".ViewAndModels.PlantOverview">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +20,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
+
+            android:paddingBottom="24dp"
             android:id="@+id/plant_view_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
