fixed click listener for the comparing List

--- a/app/src/main/res/layout/activity_comparing_element.xml
+++ b/app/src/main/res/layout/activity_comparing_element.xml
@@ -15,7 +15,7 @@
         tools:listitem="@layout/plant_item"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_add_note"
+        android:id="@+id/button_add_element"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_input_add"
