added bike tour list overview, new unified list item

--- a/app/src/main/res/layout/activity_add_comparing_list.xml
+++ b/app/src/main/res/layout/activity_add_comparing_list.xml
@@ -28,12 +28,14 @@
 
     <Button
         android:id="@+id/save_new_list_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_Text_Liste" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
