--- a/app/src/main/res/layout/activity_bike.xml
+++ b/app/src/main/res/layout/activity_bike.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/darker_gray"
     android:fitsSystemWindows="true">
 
@@ -213,7 +214,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginBottom="16dp"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="5sp">
@@ -247,6 +248,24 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="horizontal"
+                android:layout_marginBottom="32dp">
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:id="@+id/bike_tour_recyclerview"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/green_yellow_palette"
+                tools:listitem="@layout/list_item_image"/>
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
