--- a/app/src/main/res/layout/activity_comparing_element.xml
+++ b/app/src/main/res/layout/activity_comparing_element.xml
@@ -12,7 +12,7 @@
         android:id="@+id/comparing_element_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/plant_item"/>
+        tools:listitem="@layout/list_item_image"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_element"
