--- a/app/src/main/res/layout/activity_comparing_list.xml
+++ b/app/src/main/res/layout/activity_comparing_list.xml
@@ -12,7 +12,9 @@
         android:id="@+id/comparingListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/comparing_list_item"/>
+        tools:listitem="@layout/list_item_text"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_note"
