--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -37,7 +37,7 @@
                     android:layout_height="140dp"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
-                    app:srcCompat="@drawable/icon_pump" />
+                    app:srcCompat="@drawable/icon_plant" />
             </androidx.cardview.widget.CardView>
 
             <RelativeLayout
@@ -50,7 +50,7 @@
                     style="bold"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="8dp"
                     android:maxLines="1"
                     android:text="---"
                     android:textColor="@android:color/black"
